@@ -66,6 +66,9 @@ namespace gui
 		//! Gets the override color
 		virtual video::SColor getOverrideColor() const _IRR_OVERRIDE_;
 
+		//! Gets the currently used text color
+		virtual video::SColor getActiveColor() const _IRR_OVERRIDE_;
+
 		//! Sets if the static text should use the override color or the
 		//! color in the gui skin.
 		virtual void enableOverrideColor(bool enable) _IRR_OVERRIDE_;
